@@ -1,4 +1,4 @@
-.\" RCSid $Id: genklemsamp.1,v 1.3 2009/12/10 00:17:19 greg Exp $
+.\" RCSid $Id: genklemsamp.1,v 1.4 2010/09/03 23:53:49 greg Exp $
 .TH GENKLEMSAMP 1 6/13/09 RADIANCE
 .SH NAME
 genklemsamp - generate ray samples over surfaces using Klems BSDF basis
@@ -76,4 +76,5 @@ genklemsamp -c 500 -vd 0 -1 0 -vu 0 0 1 south_windows.rad
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-dctimestep(1), genskyvec(1), mkillum(1), rtcontrib(1), rtrace(1), vwrays(1)
+dctimestep(1), genBSDF(1), genskyvec(1), mkillum(1),
+rtcontrib(1), rtrace(1), vwrays(1)
