@@ -1,4 +1,4 @@
-.\" RCSid $Id: genskyvec.1,v 1.1 2009/12/10 00:17:19 greg Exp $
+.\" RCSid $Id: genskyvec.1,v 1.2 2010/09/03 23:53:49 greg Exp $
 .TH GENSKYVEC 1 12/09/09 RADIANCE
 .SH NAME
 genskyvec - compute patch radiance averages for a specific sky
@@ -50,4 +50,4 @@ gensky 9 21 12 | genskyvec -m 2 > sky09_21_12.dat
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-dctimestep(1), gensky(1), gentregvec(1), rtcontrib(1), rtrace(1)
+dctimestep(1), genBSDF(1), gensky(1), gentregvec(1), rtcontrib(1), rtrace(1)
